feature: escalations (#2)